# trophaxse

./: CMakeLists.txt  README.md  build.sh  kernel.skprx  np.h  user.suprx
app/: CMakeLists.txt
app/src/: dateedit.c  dateedit.h  debugScreen.h  listbox.c  listbox.h  main.c  np.h  rtc.h  textbox.c  textbox.h  trophy.c  trophy.h
kernel/: CMakeLists.txt  exports.yml
kernel/src/: appmgr_kernel.h  main.c
scripts/: p9timeline.py
user/: CMakeLists.txt  exports.yml
user/src/: appmgr_user.h  main.c
